--- a/src/components/FilterBox.css
+++ b/src/components/FilterBox.css
@@ -1,5 +1,5 @@
 .filter-box {
-  position: absolute;
+  position: relative;
   padding: 2rem;
   background-color: var(--White);
   width: 100%;
